--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,16 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+
+.otp-input:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+.otp-input:focus:-moz-placeholder {
+  color: transparent;
+} /* FF 4-18 */
+.otp-input:focus::-moz-placeholder {
+  color: transparent;
+} /* FF 19+ */
+.otp-input:focus:-ms-input-placeholder {
+  color: transparent;
+} /* IE 10+ */
