--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,14 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+
+.iti-flag {
+  position: absolute;
+  top: 37%;
+}
+.intl-tel-input .flag-container .arrow {
+  top: 31%;
+  position: absolute;
+  margin-left: -17px;
+  font-size: 10px;
+}
